--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
 
 * {
     box-sizing: border-box;
@@ -7,21 +7,19 @@
 :root {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
+    --color-primary: #ffc500;
+    --default-padding: 1rem;
 }
 
 body {
     margin: 0;
+    padding-top: 7.75rem;
 }
 
 ul {
     display: flex;
     list-style: none;
     padding-left: 0;
-}
-
-li {
-    margin-right: 0.625rem; 
-    /*Calcular unidade de rem = 10/16*/
 }
 
 .navbar {
@@ -31,17 +29,56 @@ li {
     align-items: center;
     top: 0;
     left: 0;
+    height: 7.75rem;
     width: 100vw;
     padding: 0 1rem;
     color: #fff;
-    background: #000;
+    background: rgb(8, 5, 5);
 }
 
 .navbar__links {
     justify-self: end;
 }
 
+.navbar__links li {
+    font-size: .875rem;
+    margin-right: 3rem; 
+    text-transform: uppercase;
+    /*Calcular unidade de rem = Unidade/16*/
+}
+
 .navbar__links a {
+    font-weight: 300;
     color: #fff;
     text-decoration: none; 
+}
+
+.navbar__links a:hover {
+    color: var(--color-primary);
+}
+
+.logo-studion {
+    font-size: 2.375rem;
+    font-weight: 900;
+    line-height: 1ch; /*Relativa ao tamanho da altura do glifo 0 da fonte*/
+    text-transform: uppercase;
+    text-align: right;
+}
+
+.logo-studion__subtitle {
+    font-size: .875rem;
+    font-weight: 300;
+}
+
+.copy--primary {
+    color: var(--color-primary);
+}
+
+
+#slider {
+    height: calc(100vh - 7.75rem);
+    padding: var(--default-padding);
+    background-color: #000;
+    background-image: url('./images/banner.jpg');
+    color: #fff;
 }
